added some CSS and more meaning to the HTML

--- a/index.html
+++ b/index.html
@@ -11,20 +11,26 @@
         <header>
             <div class="headerBar">
                 <nav>
-                    <a href="#" target="_blank">Test1</a>
-                    <a href="#" target="_blank">Test2</a>
-                    <a href="#" target="_blank">Test3</a>
-                    <a href="#" target="_blank">Test4</a>
+                    <a href="#" target="_blank">Home</a>
+                    <a href="#" target="_blank">About me</a>
+                    <a href="#" target="_blank">Projects & Certificates</a>
+                    <a href="#" target="_blank">Contact</a>
                 </nav>
             </div>
         </header>
         <section>
-            <div class="leftSide">
-                <div><img class="profileFoto" src="resources/Images/mijnGezicht.jpg"></div>
+            <div class="aboutMe">
+                <h1>
+                    Welcome to my page
+                </h1>
+                <p>
+                    <h2>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                    </h2>
+                </p>
             </div>
-            <div class="rightSide">
-                <div class="testBlock">Test 2</div>
-                <div class="testBlock">Test 3</div>
+            <div>
+                <img class="profileFoto" src="resources/Images/mijnGezicht.jpg">
             </div>
             <div class="socialMedia">
                 <a href="https://www.linkedin.com/in/vincent-meeuws-331206141/" target="_blank"><img src="resources/Icons/linkedin_4.png" id="linkDin" /></a>
