--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device=width", initial-scale="1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=opera">
         <title>Portfolio</title>
-        <link rel="stylesheet"  type="text/css" href="./resources/style.css">
+        <link rel="stylesheet"  type="text/css" href="/resources/style.css">
     </head>
     <body>
         <header>
