--- a/index.html
+++ b/index.html
@@ -40,33 +40,62 @@
                         </div>
                     </div>
                     <div class="col-6">
-                        <div class="contentBox">
+                        <div class="contentBox overflow-y-auto">
                             <h1 id="contentTitle">
                                 Welcome to my page
                             </h1>
                             <h2 id="contentFill">
                                 Try pressing a button and the page changes
                             </h2>
-                            <ol id="certificates">
-                                <li>
-                                    <a href="resources/Files/Certificates/CSS_Certificate.pdf" target="_blank">CSS Certificate</a>
-                                </li>
-                                <li>
-                                    <a href="resources/Files/Certificates/HTML_Certificate.pdf" target="_blank">HTML Certificate</a>
-                                </li>
-                                <li>
-                                    <a href="resources/Files/Certificates/Java_Certificate.pdf" target="_blank">Java Certificate</a>
-                                </li>
-                                <li>
-                                    <a href="resources/Files/Certificates/PHP_Certificate.pdf" target="_blank">PHP Certificate</a>
-                                </li>
-                                <li>
-                                    <a href="resources/Files/Certificates/GitHub_Certificate.pdf" target="_blank">Github Certificate</a>
-                                </li>
-                                <li>
-                                    <a href="resources/Files/Certificates/CommandLine_Certificate.pdf" target="_blank">Command line Certificate</a>
-                                </li>
-                            </ol>
+                            <div class="row">
+                                <div class="col">
+                                    <ol id="projects">
+                                        <details closed>
+                                            <a href="resources/Files/Certificates/CSS_Certificate.pdf" target="_blank">CSS Certificate</a>
+                                        </details>
+                                        <details closed>
+                                            <a href="resources/Files/Certificates/CSS_Certificate.pdf" target="_blank">CSS Certificate</a>
+                                        </details>
+                                        <details closed>
+                                            <a href="resources/Files/Certificates/CSS_Certificate.pdf" target="_blank">CSS Certificate</a>
+                                        </details>
+                                        <details closed>
+                                            <a href="resources/Files/Certificates/CSS_Certificate.pdf" target="_blank">CSS Certificate</a>
+                                        </details>
+                                        <details closed>
+                                            <a href="resources/Files/Certificates/CSS_Certificate.pdf" target="_blank">CSS Certificate</a>
+                                        </details>
+                                        <details closed>
+                                            <a href="resources/Files/Certificates/CSS_Certificate.pdf" target="_blank">CSS Certificate</a>
+                                        </details>
+                                        <details closed>
+                                            <a href="resources/Files/Certificates/CSS_Certificate.pdf" target="_blank">CSS Certificate</a>
+                                        </details>
+                                    </ol>
+                                </div>
+                                <div class="col">
+                                    <ol id="certificates">
+                                        <li>
+                                            <a href="resources/Files/Certificates/CSS_Certificate.pdf" target="_blank">CSS Certificate</a>
+                                        </li>
+                                        <li>
+                                            <a href="resources/Files/Certificates/HTML_Certificate.pdf" target="_blank">HTML Certificate</a>
+                                        </li>
+                                        <li>
+                                            <a href="resources/Files/Certificates/Java_Certificate.pdf" target="_blank">Java Certificate</a>
+                                        </li>
+                                        <li>
+                                            <a href="resources/Files/Certificates/PHP_Certificate.pdf" target="_blank">PHP Certificate</a>
+                                        </li>
+                                        <li>
+                                            <a href="resources/Files/Certificates/GitHub_Certificate.pdf" target="_blank">Github Certificate</a>
+                                        </li>
+                                        <li>
+                                            <a href="resources/Files/Certificates/CommandLine_Certificate.pdf" target="_blank">Command line Certificate</a>
+                                        </li>
+                                    </ol>
+                                </div>
+                            </div>
                         </div>
                     </div>
                     <div class="col-4">
