--- a/index.html
+++ b/index.html
@@ -9,27 +9,30 @@
         <link rel="stylesheet"  type="text/css" href="./resources/style.css">
     </head>
     <body>
-        <header>
-            <div class="container-fluid text-center">
-                <div class="row align-self-center" id="headerBar">
-                    <div class="col-4">
-                        <div id=year></div>
-                    </div>
-                    <div class="col-4">
-                        <nav>
-                            <button id="aboutMeButton">About me</button>>
-                            <button id="projectsButton">Projects & Certificates</button>>
-                            <button id="contactButton">Contact</button>>
-                        </nav>
-                    </div>
-                    <div class="col-4">
-                        <!-- <div class="time"></div> -->
-                    </div>
+        <nav class="navbar navbar-expand-lg navbar-light sticky-top" id="headerBar">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="#" id="year">Year</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+    
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                        <li class="nav-item">
+                            <a class="nav-link" id="aboutMeButton">About me<span class="sr-only"></span></a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" id="projectsButton">Projects & Certificates</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" id="contactButton">Contact</a>
+                        </li>
+                    </ul>
                 </div>
+            </nav>
             </div>
-        </header>
             <div class="container-fluid d-flex align-items-center">
-                <div class="row m d-flex align-items-center justify-content-center">
+                <div class="row m d-flex align-items-center">
                     <div class="col-2">
                         <div class="timeline">
                             <button id="pastButton"><img src="./resources/Buttons/Past.png" id="past" alt="Past"/></button>
@@ -93,6 +96,9 @@
                                         <li>
                                             <a href="resources/Files/Certificates/CommandLine_Certificate.pdf" target="_blank">Command line Certificate</a>
                                         </li>
+                                        <li>
+                                            <a href="resources/Files/Certificates/Bootstrap_Certificate.pdf" target="_blank">Bootstrap Certificate</a>
+                                        </li>
                                     </ol>
                                 </div>
                             </div>
@@ -106,10 +112,10 @@
                 </div>
             </div>
             <!-- <div class="projectsEnCertificaten"></div> -->
-        <footer>
-            <div class="container-fluid text-center">
-                <div class="row fixed-bottom" id="footerBar">
-                </div>
+        <footer class="container-fluid fixed-bottom text-center rounded-top" id="footerBar">
+            <div class="row">
+                <div class="col"></div>
+                <div class="col"></div>
             </div>
         </footer>
 
