created contact page and made past present future buttons disapear

--- a/index.html
+++ b/index.html
@@ -149,6 +149,11 @@
                                     </ol>
                                 </div>
                             </div>
+                            <div class="row" id="contactIconsRow">
+                                    <a href="#"><i class="fa-linkedin"></i></a>
+                                    <a href="#"><i class="fa-gitHub"></i></a>
+                                    <a href="#"><i class="fa-email"></i></a>
+                            </div>
                         </div>
                     </div>
                     <div class="col-12 col-xl-4 order-2 order-xl-3 text-center" id="contentFoto">
