--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             </div>
             <div class="container-fluid container-xxl">
                 <div class="row align-items-center my-5 g-2">
-                    <div class="col-12 col-xl-2">
+                    <div class="col-12 col-xl-2 order-sm-2 order-xl-1">
                         <div class="row align-items-end">
                             <div class="col-4 col-xl-12">
                                 <button id="pastButton"><img src="./resources/Buttons/Past.png" id="past" alt="Past"/></button>
@@ -47,13 +47,15 @@
                     </div>
                     <div class="col-12 col-xl-6 order-3 d-flex justify-content-center">
                         <div class="col overflow-y-auto" id="contentBox">
-                            <h1 class="sticky-top" id="contentTitle">
-                                Welcome to my page
-                            </h1>
                             <div class="row">
-                                <h2 id="contentFill">
-                                    Try pressing a button and the page changes
-                                </h2>
+                                <h1 class="sticky-top" id="contentTitle">
+                                    Welcome to my page
+                                </h1>
+                            </div>
+                            <div class="row">
+                                <p id="contentFill">
+                                    Try pressing a button and the page will change!
+                                </p>
                             </div>
                             <div class="row">
                                 <div class="col-6">
@@ -150,13 +152,13 @@
                                 </div>
                             </div>
                             <div class="row" id="contactIconsRow">
-                                    <a href="#"><i class="fa-linkedin"></i></a>
-                                    <a href="#"><i class="fa-gitHub"></i></a>
-                                    <a href="#"><i class="fa-email"></i></a>
+                                    <a href="https://www.linkedin.com/in/vincent-meeuws-331206141/" target="_blank"><i class="fa-linkedin"></i></a>
+                                    <a href="https://github.com/VisnetAppel" target="_blank"><i class="fa-gitHub"></i></a>
+                                    <a href="" target="_blank"><i class="fa-email"></i></a>
                             </div>
                         </div>
                     </div>
-                    <div class="col-12 col-xl-4 order-2 order-xl-3 text-center" id="contentFoto">
+                    <div class="col-12 col-xl-4 order-1 order-xl-3 text-center" id="contentFoto">
                         <img class="rounded" id="profileFoto" src="resources/Images/mijnGezicht.jpg">
                     </div>
                 </div>
